--- a/package.json
+++ b/package.json
@@ -55,7 +55,7 @@
     "test": "vitest run"
   },
   "dependencies": {
-    "allure-js-commons": "3.0.0-beta.12"
+    "allure-js-commons": "github:lbltnmrgnv/testallurecommons"
   },
   "devDependencies": {
     "@babel/cli": "^7.24.6",
